--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Random Card Generator</title>
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <script
+      src="https://kit.fontawesome.com/95395513ca.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
+    <div class="blur-background"></div>
+    <div class="card-container">
+      <div id="carta" class="card"></div>
+      <div class="controls">
+        <input id="ancho" type="number" placeholder="Suggested width: 300" />
+        <input id="alto" type="number" placeholder="Suggested heigth: 400" />
+        <button id="generar-btn" class="btn btn-primary mt-2">
+          Generate a New Card
+        </button>
+      </div>
+      <div class="footer p-4 text-center">
         Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+        <a href="https://github.com/marialejandravc">marialejandravc</a>
       </div>
     </div>
+
+    <script src="app.js"></script>
   </body>
 </html>
